--- a/Demo_OCC_QT/Demo_OCC_QT.vcxproj
+++ b/Demo_OCC_QT/Demo_OCC_QT.vcxproj
@@ -24,7 +24,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="occ.h" />
-    <ClInclude Include="occall.h" />
     <QtMoc Include="View.h" />
   </ItemGroup>
   <ItemGroup>
@@ -77,12 +76,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <IncludePath>D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\opencascade-7.6.0\inc;$(IncludePath)</IncludePath>
     <LibraryPath>D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\opencascade-7.6.0\win64\vc14\lib;$(LibraryPath)</LibraryPath>
-    <ExecutablePath>D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\opencascade-7.6.0\win64\vc14\bin;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\tbb_2017.0.100\bin\intel64\vc12;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\qt5.11.2-vc14-64\bin;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\openvr-1.14.15-64\bin\win64;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\vtk-6.1.0-vc14-64\bin;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\tcltk-86-64\bin;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\freeimage-3.17.0-vc14-64\bin;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\ffmpeg-3.3.4-64\bin;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\freetype-2.5.5-vc14-64\bin;$(ExecutablePath)</ExecutablePath>
+    <ExecutablePath>$(VC_ExecutablePath_x64)</ExecutablePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <IncludePath>D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\opencascade-7.6.0\inc;$(IncludePath)</IncludePath>
     <LibraryPath>D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\opencascade-7.6.0\win64\vc14\lib;$(LibraryPath)</LibraryPath>
-    <ExecutablePath>D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\opencascade-7.6.0\win64\vc14\bin;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\qt5.11.2-vc14-64\bin;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\vtk-6.1.0-vc14-64\bin;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\tcltk-86-64\bin;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\tbb_2017.0.100\bin;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\openvr-1.14.15-64\bin;D:\Alluser\akingse\TPL\OpenCASCADE-7.6.0-vc14-64\freeimage-3.17.0-vc14-64\bin;$(ExecutablePath)</ExecutablePath>
+    <ExecutablePath>$(VC_ExecutablePath_x64)</ExecutablePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
     <ClCompile>
