--- a/Demo_OCC_QT/Demo_OCC_QT.vcxproj
+++ b/Demo_OCC_QT/Demo_OCC_QT.vcxproj
@@ -58,6 +58,8 @@
     <QtInstall>5.12.12_msvc2017_64</QtInstall>
     <QtModules>core;gui;widgets</QtModules>
     <QtBuildConfig>release</QtBuildConfig>
+    <QtPathBinaries>C:\Qt\Qt5.12.12\5.12.12\msvc2017_64\bin</QtPathBinaries>
+    <QtPathLibraryExecutables>C:\Qt\Qt5.12.12\5.12.12\msvc2017_64\bin</QtPathLibraryExecutables>
   </PropertyGroup>
   <Target Name="QtMsBuildNotFound" BeforeTargets="CustomBuild;ClCompile" Condition="!Exists('$(QtMsBuild)\qt.targets') or !Exists('$(QtMsBuild)\qt.props')">
     <Message Importance="High" Text="QtMsBuild: could not locate qt.targets, qt.props; project may not build correctly." />
